Kargo made some changes

--- a/galactica/overlays/prod/kustomization.yaml
+++ b/galactica/overlays/prod/kustomization.yaml
@@ -2,3 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../../base
+images:
+- name: spaceport.azurecr.io/galactica
+  digest: sha256:0a602548ee0b60d3343e8ea880e304fd1c38c05197d144d815609a3230f4d939
